# magicicapsula

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: lint.yml  publish.yml  tests.yml
magicicapsula/: __main__.py  cli.py
magicicapsula/assets/: logo.txt
magicicapsula/commands/: _style.py  _util.py  add.py  config.py  info.py  init.py  open.py  remind.py  rm.py  seal.py  status.py  verify.py  version.py
magicicapsula/core/: __init__.py  capsule.py  config.py  crypto.py  draft.py  errors.py  ics.py
tests/: conftest.py  test_cli.py  test_style.py
tests/commands/: test_capsule_commands.py  test_config_and_version.py  test_draft_commands.py
tests/core/: test_capsule.py  test_config.py  test_crypto.py  test_draft.py  test_errors.py  test_ics.py  test_util.py
