[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "magicicapsula"
description = "seal files now, open them later"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "iDavi", email = "odavi20527@gmail.com" }]
keywords = ["time-capsule", "encryption", "cli", "archive", "vault"]
dependencies = ["cryptography>=42"]
dynamic = ["version"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security :: Cryptography",
    "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/iDavi/magicicapsula"
Repository = "https://github.com/iDavi/magicicapsula"
Issues = "https://github.com/iDavi/magicicapsula/issues"

[project.optional-dependencies]
dev = ["ruff>=0.15"]

[project.scripts]
magicicapsula = "magicicapsula.cli:main"
mcap = "magicicapsula.cli:main"

[tool.setuptools.dynamic]
version = { attr = "magicicapsula.__version__" }

[tool.setuptools.packages.find]
include = ["magicicapsula*"]

[tool.setuptools.package-data]
magicicapsula = ["assets/*.txt"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",       # pycodestyle errors
    "F",       # pyflakes (unused imports/vars, undefined names)
    "W",       # pycodestyle warnings
    "I",       # import sorting
    "UP",      # pyupgrade (outdated syntax)
    "B",       # bugbear (likely bugs: mutable defaults, etc.)
    "SIM",     # simplifiable code
    "C4",      # comprehension cleanups
    "RUF",     # ruff-specific
    # --- catches common AI-generated code smells ---
    "ERA",     # commented-out / dead code left behind
    "BLE",     # blind `except:` that swallows everything
    "RET",     # redundant else/return after return
    "PERF",    # obvious performance anti-patterns
    "PIE",     # misc unnecessary code (pass, dict updates, ...)
    "TRY",     # exception handling anti-patterns
    "PLW",     # pylint warnings (e.g. clobbered loop vars)
    "PLR2004", # unexplained magic numbers in comparisons
]
ignore = [
    "TRY003",  # long messages at the raise site read fine for a small CLI
]

[tool.ruff.lint.flake8-bugbear]
# KdfParams is a frozen (immutable) dataclass, so it's safe as a default.
extend-immutable-calls = ["magicicapsula.core.crypto.KdfParams"]
